test/zinc_source/compile_errors/callables/06_lambda_capture_parameter.zn
// expected-error: assignment to captured outer variable 'x' requires 'out x'
fn wrap(x) {
    f = fn() {
        x = x + 1
        return x
    }

    return f()
}

fn main() {
    print(wrap(1))
}
